# Programacao_Competitiva

./: CMakeLists.txt  README.md  template.cpp
Algoritmos/Grafos/: ArticulationVertexAndBridges.cpp  Bipartite_Graph_Check.cpp  Cycle_Check.cpp  Kosaraju_Tarjan.cpp
Algoritmos/Matematica/: Triangulo_Pascal_BottomUp_DP.cpp
Maratonas_Anteriores/MPP 2026/: A.cpp  B.cpp  C.cpp  D.cpp  H.cpp  I-SEMRESOLUCAO.cpp  N.cpp
Solucoes/UVA/Grafos/: Bicoloring - 10004.cpp  Calling Circles - 247.cpp  Come and Go - 11838.cpp  Lighting Away - 11770.cpp
